# TheNepaliKeyboard

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: artifact.rs  lib.rs  transliteration.rs
crates/data-builder/: Cargo.toml
crates/data-builder/src/: lib.rs  main.rs
crates/host-api/: Cargo.toml
crates/host-api/src/: lib.rs
crates/windows-tip/: Cargo.toml
crates/windows-tip/src/: class_factory.rs  config.rs  lib.rs  registration.rs  text_service.rs
