[workspace]
members = [
    "crates/cli",
    "crates/core-engine",
    "crates/data-builder",
    "crates/host-api",
    "crates/windows-tip",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["OpenAI Codex"]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
html-escape = "0.2"
once_cell = "1.21"
regex = "1.11"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
thiserror = "2.0"
unicode-normalization = "0.1"
windows = "0.58"
winreg = "0.52"
