[package]
name = "windows-tip"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tipctl"
path = "src/bin/tipctl.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
core-engine = { path = "../core-engine" }
host-api = { path = "../host-api" }
once_cell.workspace = true
thiserror.workspace = true
windows = { workspace = true, features = [
    "implement",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58"
winreg.workspace = true
